--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Todas as<br>Realizações dele,</span></mark> vinham <mark><span style="font-siz
  <h3 style="font-size:37px;TEXT-TRANSFORM:NONE">Clique no Vídeo Abaixo Onde o Próprio Luís Revela o Passo-a-Passo 
 <br>para ter os Mesmos Resultados do<br>Senhor!
 </h3>
-<center><a target="_blank" href="http://gtxflores.online/mobile-2/?utm_source=Facebook|PDF1Vid|button"><img class="image" style="width:97%;height:21%" src="http://brasilmanchete.com/imagens/botao.png?id=4"><a></center><br>				
+<center><a target="_blank" href="https://suasorte.github.io/c4/?utm_source=Facebook|PDF1Vid|button"><img class="image" style="width:97%;height:21%" src="http://brasilmanchete.com/imagens/botao.png?id=4"><a></center><br>				
  <iframe style=" width: 90% !important; height: 41.8% !important;" src="https://www.youtube-nocookie.com/embed/QIE2Pr7G_mw?wmode=opaque&showinfo=0&autoplay=1&controls=0&modestbranding=1&rel=0&start=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe><br>		<br>
 	<center><a target="_blank" href="http://mon.net.br/d92xi?src=Facebook|PDF1Vid|gifbutton"><img class="image" style="width:97%;height:23%" src="http://brasilmanchete.com/imagens/teste2.gif"><a></center><br>		
 
